--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -1,10 +1,10 @@
 /*!
 
  =========================================================
- * Awesome Landing Page - v1.2.2
+ * BlueRipple Landing Page v.1.2
  =========================================================
  
- * Product Page: https://www.creative-tim.com/product/awesome-landing-page
+ * Product Page: https://www.newpotatotech.com/products/blueripple.html
  * Copyright 2017 Creative Tim (http://www.creative-tim.com)
  * Licensed under MIT (https://github.com/creativetimofficial/awesome-landing-page/blob/master/LICENSE.md)
  
@@ -30,7 +30,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 42px;
+  font-size: 56px;
   line-height: 1.1;
 }
 
@@ -48,6 +48,8 @@ h5, .h5 {
   font-size: 20px;
   margin-bottom: 15px;
   line-height: 1.8;
+  font-weight: normal;
+  font-style: italic;
 }
 
 h6, .h6 {
@@ -121,6 +123,7 @@ margin: 20px auto;
 .accordion-item {
 border: 1px solid #fff;
 margin-bottom: 10px;
+display: block;
 }
 
 .accordion-header {
@@ -141,7 +144,8 @@ border: 1px solid #f1f1f1;
 display: block;
 }
 .accordion:hover {
-background-color: #ddd;
+background-color: #1749bd;
+text-color: #fff;
 }
 .text-overlay {
 position: absolute;
@@ -162,8 +166,6 @@ border: 1px solid #fff;
 transition: max-height 0.2s ease-out;
 }
 .br-logo-container {
-
-
 align-content: center;
 text-align:center;
 }
@@ -292,6 +294,7 @@ background-color: #fff;
 .btn-info {
   border-color: #2ca8ff;
   color: #2ca8ff;
+  padding: 10px 18px 0px 18px;
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open > .btn-info.dropdown-toggle {
   background-color: transparent;
@@ -1010,7 +1013,7 @@ background-color: #fff;
     display: block;
     z-index: 1;
     content: "";
-    opacity: .7;
+    opacity: .8;
 }
 .filter-gradient.gray:after{
 /* IE9 SVG, needs conditional override of 'filter' to 'none' */
@@ -1089,9 +1092,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
   width: 100%;
   height: 100%;
 }
+
 .landing-page .parallax .parallax-background img{
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   position: relative;
   z-index: 1;
   opacity: 0.4;
@@ -1106,10 +1110,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 .landing-page .parallax .parallax-image{
   width: 100%;
   margin: 0 auto;
-  margin-top: 0px;
-  margin-bottom: 45px;
   float: right;
   text-align: center;
+  
 }
 
 .landing-page .parallax .parallax-image img {
