--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -295,6 +295,7 @@ background-color: #fff;
   border-color: #2ca8ff;
   color: #2ca8ff;
   padding: 10px 18px 0px 18px;
+  margin-top: 25px;
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open > .btn-info.dropdown-toggle {
   background-color: transparent;
@@ -1090,12 +1091,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
   position: relative;
   z-index: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .landing-page .parallax .parallax-background img{
   width: auto;
-  height: 100%;
+  height: auto;
   position: relative;
   z-index: 1;
   opacity: 0.4;
@@ -1112,7 +1113,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
   margin: 0 auto;
   float: right;
   text-align: center;
-  
 }
 
 .landing-page .parallax .parallax-image img {
@@ -1121,7 +1121,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 }
 
 .landing-page .parallax .parallax-image img.phone{
-  width: 93%;
+  width: 97%;
   float: right;
 }
 
@@ -1233,25 +1233,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
    }
  
    .landing-page .section-no-padding .parallax .info{
-    position: absolute;
+    position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform:    translateX(-50%);
     -ms-transform:     translateX(-50%);
     -o-transform:      translateX(-50%);
     transform:         translateX(-50%);
-    top: 150px;
 
   }
-  .landing-page .section-no-padding .parallax .info h1{
-    font-size: 40px;
+  .landing-page .section-no-padding .parallax .info h2{
+    font-size: 56px;
     font-weight: 300;
+ 
   }
-
    .landing-page .section-no-padding .parallax .info  a{
-    position: relative;
-    z-index: 8;
-    
+      position: relative;
+      z-index: 8;
     }
 
    .landing-page .section-no-padding .parallax .info .btn-lg{
@@ -1281,7 +1279,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
    }
 
    .landing-page .section-demo .row:first-child{
-    margin-bottom: 100px;
+    margin-bottom: 0px;
    }
 
    .landing-page .section-demo .carousel-inner{
