--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -187,9 +187,9 @@ background-color: #fff;
   font-weight: 400;
   opacity: 0.8;
   filter: alpha(opacity=80);
-  padding: 8px 8px;
-  border-color: #888888;
-  color: #888888;
+  padding: 13px 18px 0px 18px;
+  border-color: #2ca8ff;
+  color: #2ca8ff;
 }
 .btn:hover, .btn:focus, .btn:active, .btn.active, .open > .btn.dropdown-toggle {
   background-color: transparent;
@@ -198,16 +198,16 @@ background-color: #fff;
 }
 .btn:disabled, .btn[disabled], .btn.disabled {
   background-color: transparent;
-  border-color: #888888;
+  border-color: #2ca8ff;
 }
 .btn.btn-fill {
   color: white;
-  background-color: #888888;
+  background-color: #2ca8ff;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 .btn.btn-fill:hover, .btn.btn-fill:focus, .btn.btn-fill:active, .btn.btn-fill.active, .open > .btn.btn-fill.dropdown-toggle {
-  background-color: #777777;
+  background-color: #2ca8ff;
   color: white;
 }
 .btn.btn-fill .caret {
@@ -295,7 +295,7 @@ background-color: #fff;
   border-color: #2ca8ff;
   color: #2ca8ff;
   padding: 10px 18px 0px 18px;
-  margin-top: 25px;
+  
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open > .btn-info.dropdown-toggle {
   background-color: transparent;
@@ -449,7 +449,7 @@ background-color: #fff;
 .btn-lg {
   font-size: 18px;
   border-radius: 6px;
-  padding: 14px 30px;
+  padding: 20px 40px;
   font-weight: 400;
 }
 .btn-lg.btn-round {
@@ -802,7 +802,7 @@ background-color: #fff;
 .parallax .parallax-image  {
   width: 100%;
   position: absolute;
-  height: 100%;
+  height: auto;
   z-index: 0;
 }
 
@@ -969,7 +969,7 @@ background-color: #fff;
       text-transform: uppercase;
       font-weight: 200;
       color: #333;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
       font-size: 30px;
       position: relative;
       line-height: 30px;
@@ -990,7 +990,13 @@ background-color: #fff;
   display: block;
   background-size: 100%;
 }
-
+.landing-page .parallax-second-bg {
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  display: block;
+  background-size: 100%;
+}
 .landing-page .parallax .container{
   z-index: 12;
   position: absolute;
@@ -999,8 +1005,8 @@ background-color: #fff;
   margin-right: auto;
   left: 0;
   right: 0;
+  
 }
-
 .filter-gradient{
   position: relative;
 }
@@ -1096,7 +1102,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 
 .landing-page .parallax .parallax-background img{
   width: auto;
-  height: auto;
+  height: 100%;
   position: relative;
   z-index: 1;
   opacity: 0.4;
@@ -1110,6 +1116,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 }
 .landing-page .parallax .parallax-image{
   width: 100%;
+  height: auto;
   margin: 0 auto;
   float: right;
   text-align: center;
@@ -1208,6 +1215,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
    }
  .section-full-width {
     width: 100%;
+    height: 
    }
    .landing-page .section-presentation img{
     position: absolute;
@@ -1228,24 +1236,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 600px;
+    height: auto;
     text-align: center;
    }
  
    .landing-page .section-no-padding .parallax .info{
-    position: relative;
+    position: absolute;
+    vertical-align: center;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform:    translateX(-50%);
     -ms-transform:     translateX(-50%);
     -o-transform:      translateX(-50%);
     transform:         translateX(-50%);
-
+  
   }
   .landing-page .section-no-padding .parallax .info h2{
     font-size: 56px;
-    font-weight: 300;
- 
+    font-weight: 400;
+    z-index: 8;
   }
    .landing-page .section-no-padding .parallax .info  a{
       position: relative;
@@ -1255,7 +1264,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
    .landing-page .section-no-padding .parallax .info .btn-lg{
     margin-top: 15px;
     padding: 14px 80px;
-    z-index: 7;
+    z-index: 8;
    }
 
    .landing-page .section-demo{
