--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -168,6 +168,7 @@ transition: max-height 0.2s ease-out;
 .br-logo-container {
 align-content: center;
 text-align:center;
+margin:-60px 0px -100px 0px;
 }
 /*columns*/
 .column .panel {
