--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -189,8 +189,8 @@ background-color: #fff;
   opacity: 0.8;
   filter: alpha(opacity=80);
   padding: 13px 18px 0px 18px;
-  border-color: #2ca8ff;
-  color: #2ca8ff;
+  border-color: #3963AC;
+  color: #3963AC;
 }
 .btn:hover, .btn:focus, .btn:active, .btn.active, .open > .btn.dropdown-toggle {
   background-color: transparent;
@@ -199,16 +199,16 @@ background-color: #fff;
 }
 .btn:disabled, .btn[disabled], .btn.disabled {
   background-color: transparent;
-  border-color: #2ca8ff;
+  border-color: #3963AC;
 }
 .btn.btn-fill {
   color: white;
-  background-color: #2ca8ff;
+  background-color: #3963AC;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 .btn.btn-fill:hover, .btn.btn-fill:focus, .btn.btn-fill:active, .btn.btn-fill.active, .open > .btn.btn-fill.dropdown-toggle {
-  background-color: #2ca8ff;
+  background-color: #3963AC;
   color: white;
 }
 .btn.btn-fill .caret {
